--- a/spices/cix-iptables.org
+++ b/spices/cix-iptables.org
@@ -1,6 +1,6 @@
 # File           : cix-iptables.org
 # Created        : <2016-11-07 Mon 23:05:04 GMT>
-# Last Modified  : <2016-11-07 Mon 23:05:52 GMT> sharlatan
+# Last Modified  : <2016-11-30 Wed 22:48:00 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -9,7 +9,7 @@
 
 #+TITLE: IP talbes
 
-** Index
+* Index
 #+BEGIN_EXAMPLE
     iptables-xml (1)     - Convert iptables-save format to XML
     ip6tables (8)        - administration tool for IPv4/IPv6 packet filtering and NAT
