--- a/spices/cix-dmidecode.org
+++ b/spices/cix-dmidecode.org
@@ -1,6 +1,6 @@
 # File           : cix-dmidecode.org
 # Created        : <2016-11-13 Sun 19:49:01 GMT>
-# Last Modified  : <2016-11-14 Mon 22:13:37 GMT> sharlatan
+# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -11,7 +11,7 @@
 
 |-------------+---------------|
 | *Author*      |               |
-| *Maintainers* |               |
+| *Contributors* |               |
 | *Released*    |               |
 | *Source*      | [[http://git.savannah.gnu.org/cgit/dmidecode.git][dmidecode.git]] |
 |-------------+---------------|
