--- a/spices/cix-e2fsprogs.org
+++ b/spices/cix-e2fsprogs.org
@@ -1,6 +1,6 @@
 # File           : cix-e2fsprogs.org
 # Created        : <2016-03-06 Sun 00:25:13 GMT>
-# Last Modified  : <2016-11-13 Sun 19:27:30 GMT> sharlatan
+# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -10,7 +10,7 @@
 
 |-------------+------------------|
 | *Author*      | Theodore Ts'o    |
-| *Maintainers* | Darrick J. Wong, |
+| *Contributors* | Darrick J. Wong, |
 |             | Andreas Dilger   |
 | *Realised*    | 1997             |
 | *Source*      | [[http://git.kernel.org/cgit/fs/ext2/e2fsprogs.git/][git: e2fsprogs]]   |
