--- a/spices/cix-iproute2.org
+++ b/spices/cix-iproute2.org
@@ -10,7 +10,7 @@
 |-------------+----------------------------------------------------|
 | *Author*      | Alexey Kuznetsovd                                  |
 |-------------+----------------------------------------------------|
-| *Maintainers* | Nikolay Aleksandrov, Daniel Borkmann, Roopa Prabhu |
+| *Contributors* | Nikolay Aleksandrov, Daniel Borkmann, Roopa Prabhu |
 |             | Gustavo Zacarias, Nicolas Dichtel, Paolo Abeni     |
 |             | Stephen Hemminger, Zhang Sheng [[http://git.kernel.org/cgit/linux/kernel/git/shemminger/iproute2.git/stats/?period=q&ofs=-1][(all..)]]             |
 | *Realised*    | 2007                                               |
