--- a/spices/cix-shadow-utils.org
+++ b/spices/cix-shadow-utils.org
@@ -1,6 +1,6 @@
 # File           : cix-shadow-utils.org
 # Created        : <2016-05-03 Tue 00:09:23 GMT>
-# Last Modified  : <2016-11-20 Sun 21:30:14 GMT> sharlatan
+# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -13,7 +13,7 @@
 
 |-------------+----------------------------------|
 | *Author*      |                                  |
-| *Maintainers* | Tomasz Kłoczko, Nicolas François |
+| *Contributors* | Tomasz Kłoczko, Nicolas François |
 | *Realised*    | 2005                             |
 | *Source*      | [[https://anonscm.debian.org/git/pkg-shadow/shadow.git][shadow.git]]                       |
 |-------------+----------------------------------|
