--- a/spices/cix-usbutils.org
+++ b/spices/cix-usbutils.org
@@ -1,15 +1,15 @@
 # File           : cix-usbutils.org
 # Created        : <2016-11-13 Sun 20:16:58 GMT>
-# Last Modified  : <2016-11-13 Sun 20:17:40 GMT> sharlatan
+# Last Modified  : <2016-12-17 Sat 21:57:52 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
 
 #+OPTIONS: num:nil
 
-#+TITLE: USB utilities
+#+TITLE: us-utilities
 
-** Index
+* Index
 #+BEGIN_EXAMPLE
    lsusb (8)            - list USB devices
    usb-devices (1)      - print USB device details
