--- a/spices/cix-gnu-core-utilities.org
+++ b/spices/cix-gnu-core-utilities.org
@@ -1,6 +1,6 @@
 # File          : gnu-core-utilities.md
 # Created       : Wed 14 Oct 2015 23:07:41
-# Last Modified : <2016-12-21 Wed 22:20:35 GMT> sharlatan
+# Last Modified : <2017-1-04 Wed 00:21:20 GMT> sharlatan
 # Maintainer    : sharlatan
 
 #+OPTIONS: num:nil
@@ -544,6 +544,12 @@ repoint symlink to another file:
 : ls [-aAlbBCdDfFghHiIklLmNopqQrRsStTuvwxXZ1] [FILE/DIRECTORY]
 
 *** ls::examples
+
+**** ls-161226204717
+list block devices:
+:    ~$ ls -l /dev /dev/mapper | grep '^b'
+[[file:./cix-gnu-grep.org::*grep][grep (1)]]
+
 **** ls-161118234510
 tree view of all sub directories:
 #+BEGIN_SRC sh
@@ -556,8 +562,7 @@ tree view of all sub directories:
             -e 's/^/   /' \
             -e 's/-/|/'
 #+END_SRC
-[[file:./cix-gnu-grep.org::*grep][grep (1)]],
-[[file:./cix-sed.org::*sed][sed (1)]]
+[[file:./cix-gnu-grep.org::*grep][grep (1)]] [[file:./cix-sed.org::*sed][sed (1)]]
 
 **** ls-161107232103
 sweet examples of using *ls*:
@@ -565,7 +570,7 @@ sweet examples of using *ls*:
     ~$ ls -Rotti
     ~$ ls -Ham
     ~$ ls -and
-    ~$ ls -alSh
+    ~$ ls -laSh
 #+END_EXAMPLE
 
 **** ls-161107232114
@@ -579,8 +584,7 @@ files. Actively using *-F* key to classify */=>@|:
     ~$ ls -a | grep "^\."                          # hiden files
     ~$ ls -Fa | grep "\." | grep "@" | cut -d@ -f1 # hiden links
 #+END_EXAMPLE
-[[file:./cix-gnu-grep.org::*grep][grep (1)]],
-[[file:./cix-gnu-core-utilities.org::*cut][cut (1)]]
+[[file:./cix-gnu-grep.org::*grep][grep (1)]] [[file:./cix-gnu-core-utilities.org::*cut][cut (1)]]
 
 **** ls-151114230741
 aliases best practice:
@@ -597,7 +601,7 @@ aliases best practice:
     alias lmore='ls -lhGgo | more'
 #+END_EXAMPLE
 *** ls::see-also
-  [[file:./cix-gnu-core-utilities.org::*dir][dir (1)]],
+  [[file:./cix-gnu-core-utilities.org::*dir][dir (1)]]
 ** md5sum                                                                       :cmd:
 [[Index][⬆]]
 *** md5sum::options
@@ -983,10 +987,14 @@ rename files in cwd from lower to UPPER case:
       mv "$file" $(echo "$file" | tr '[:lower:]' '[:upper:]')
   done
 #+END_SRC
-[[file:./cix-gnu-bash-builtin.org::for][for]], [[file:./cix-gnu-bash-builtin.org::*echo][echo]], [[file:./cix-gnu-core-utilities.org::*mv][mv (1)]]
+[[file:./cix-gnu-bash-builtin.org::for][for]] [[file:./cix-gnu-bash-builtin.org::*echo][echo]] [[file:./cix-gnu-core-utilities.org::*mv][mv (1)]]
 **** tr-161209233045
 remove new lines from a file:
 :    ~$ tr -d '\n' < input_file > input_file_tm && mv input_file_tm input_file
+
+**** tr-170104001918
+windows files to UNIX format:
+:    ~$ tr -d '\15\32' < input_win_file.txt > output_unix_file
 *** tr::files
 *** tr::see-also
 ** true                                                                         :cmd:
