--- a/spices/cix-gnu-findutils.org
+++ b/spices/cix-gnu-findutils.org
@@ -1,6 +1,6 @@
 # File           : cix-gnu-findutils.org
 # Created        : <2015-11-17 Tue 22:54:30 GMT>
-# Last Modified  : <2016-11-23 Wed 08:00:40 GMT> sharlatan
+# Last Modified  : <2016-12-20 Tue 01:00:30 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -10,16 +10,16 @@
 [[../README.org::*Index][|≣|]]
 #+TITLE: GNU Findutils
 
-|-------------+-----------------------------------------------------|
-| *Author*      | Kevin Dalley                                        |
-| *Maintainers* | Eric B. Decker, Michael Rendell, David J. MacKenzie |
-|             | Jim Meyering, Tim Wood, Paul Eggert,                |
-|             | James Youngman, Jay Plett, Paul Sheer,              |
-|             | Dmitry V. Levin, Bas van Gompel, Eric Blake         |
-| *Realised*    | 2000                                                |
-| *Source*      | [[http://git.savannah.gnu.org/cgit/findutils.git][findutils.git]]                                       |
-| *Info*        | [[https://www.gnu.org/software/findutils/][GNU findutils]]                                       |
-|-------------+-----------------------------------------------------|
+|--------------+-----------------------------------------------------|
+| *Author*       | Kevin Dalley                                        |
+| *Contributors* | Eric B. Decker, Michael Rendell, David J. MacKenzie |
+|              | Jim Meyering, Tim Wood, Paul Eggert,                |
+|              | James Youngman, Jay Plett, Paul Sheer,              |
+|              | Dmitry V. Levin, Bas van Gompel, Eric Blake         |
+| *Realised*     | 2000                                                |
+| *Source*       | [[http://git.savannah.gnu.org/cgit/findutils.git][findutils.git]]                                       |
+| *Info*         | [[https://www.gnu.org/software/findutils/][GNU findutils]]                                       |
+|--------------+-----------------------------------------------------|
 
 The GNU Find Utilities are  the basic directory searching utilities of
 the  GNU  operating  system.  These programs  are  typically  used  in
@@ -47,19 +47,22 @@ directory search and file locating capabilities to other commands.
 
 *** find::exampls
 
-- find-161119210555 :: copy all "*jpg" files from current directory to
-     $HOME/Pictures one:
+**** find-161119210555
+copy all "*jpg" files from current directory to $HOME/Pictures:
 :    ~$ find ./ -type f -name "*jpg" -exec cp {} ~/Pictures \;
 [[file:./cix-gnu-core-utilities.org::*cp][cp (1)]]
 
-- find-161119210633 :: find only in current directory (universal):
+**** find-161119210633
+find only in current directory (universal):
 :     ~$ find ./ \( ! -name . -prune \) \( -type -f -o -type l \) # POSIX version
 :     ~$ find ./ -maxdepth 1                                      # GNU version
 
-- find-161119211114 :: show all files in current directory except hidden:
+**** find-161119211114
+show all files in current directory except hidden:
 :     ~$ find ./ -maxdepth 1 -type f -not '.*'
 
-- find-161119211147 :: search for  specified "string" in list of files:
+**** find-161119211147
+search for  specified "string" in list of files:
 #+BEGIN_SRC sh
   #!/usr/bin/env bash
 
@@ -68,16 +71,18 @@ directory search and file locating capabilities to other commands.
 #+END_SRC
 [[file:./cix-gnu-grep.org::*grep][grep (1)]]
 
-- find-161119211506 :: Find all files on the file system that are called
-     configuration, ignoring case, and accommodating abbreviations such as
-     confg, cnfg, and cnfig:
+**** find-161119211506
+find all files on the file system that are called configuration, ignoring case,
+and accommodating abbreviations such as confg, cnfg, and cnfig:
 :    ~# find / -regex '^[/a-z_]*[cC]+[Oo]*[nN]+[fF]+[iI]*[gF]+$' 2>/dev/null
 
-- find-161119211734 :: find all files chmod all 777 to 644:
+**** find-161119211734
+find all files permission 777 and change them to 644:
 :    ~# find / -type f -perm 0777 -print -exec chmod 644 {} \;
 [[file:./cix-gnu-core-utilities.org::*chmod][chmod (1)]]
 
-- find-161119212110 :: find all dublicated file by their hashes:
+**** find-161119212110
+find all dublicated file by their hashes:
 #+BEGIN_SRC sh
   #!/usr/bin/env bash
 
@@ -89,11 +94,33 @@ directory search and file locating capabilities to other commands.
       | uniq -w"${HASH_CHCK[2]}" --all-repeated=separate
 #+END_SRC
 
+**** find-161202213913
+find all setuid files/commands:
+:    ~# find / -user root -perm -4000 -exec ls -ldb {} 2>/dev/null \;
+
+*** find:see-also
+chflags
+(1), chmod(1), cvs(1), locate(1), whereis(1), which(1), xargs(1),
+stat(2), acl(3), fts(3), getgrent(3), getpwent(3), strmode(3),
+re_format(7), symlink(7)
 ** xargs                                                                        :cmd:
 *** xargs::examples
-- xargs-161122000716 :: *cp* or *mv* files by list in a file:
-: xargs mv -t /distinction/direcotiry < list_of_file_pathes
+**** xargs-161122000716
+*cp* or *mv* files by list in a file:
+:    ~$ xargs mv -t /distinction/direcotiry < list_of_file_pathes
+**** xargs-161210000709
+split bulk text into n culloms:
+#+BEGIN_SRC sh
+  #!/usr/bin/env bash
+
+  N=10
+  # Alter the header value to get longer string
+  TEST_DATA="$(head /dev/random | base64 | tr -d '\n' | sed 's/.\{3\}/& /g')"
+
+  echo "$TEST_DATA" | xargs -n "$N"
+#+END_SRC
 
 * References
 ** Links
-- A collection of Unix/Linux find command examples http://alvinalexander.com/unix/edu/examples/find.shtml
+- A collection of Unix/Linux find command examples
+  http://alvinalexander.com/unix/edu/examples/find.shtml
