--- a/spices/cix-lvm2.org
+++ b/spices/cix-lvm2.org
@@ -1,6 +1,6 @@
 # File           : cix-lvm2.org
 # Created        : <2016-02-21 Mon 02:02:27 GMT>
-# Last Modified  : <2016-11-08 Tue 23:18:46 GMT> sharlatan
+# Last Modified  : <2016-12-26 Mon 21:28:25 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -11,43 +11,98 @@
 #+TITLE: lvm2
 /Userland logical volume management tools/
 
-|-------------+------------------------------------------|
-| *Author*      | Heinz Mauelshagen                        |
-| *Maintainers* | Zdenek Kabelac, Peter Rajnoha            |
-|             | David Teigland, Alasdair G Kergon        |
-| *Realised*    | 1998                                     |
-| *Source*      | [LVM2](https://www.sourceware.org/lvm2/) |
-|-------------+------------------------------------------|
+|--------------+------------------------------------|
+| *Author*       | Heinz Mauelshagen                  |
+| *Contributors* | Zdenek Kabelac, Peter Rajnoha      |
+|              | David Teigland, Alasdair G Kergon, |
+|              | Tony Asleson                       |
+| *Realised*     | 1998                               |
+| *Source*       | [[https://git.fedorahosted.org/git/lvm2.git][lvm2.git]]                           |
+|--------------+------------------------------------|
 
 
-LVM2 includes all of the support for handling read/write operations on physical
+LVM2 includes all of the support  for handling read/write operations on physical
 volumes (hard disks, RAID-Systems, magneto optical, etc., multiple devices (MD),
 see mdadd(8) or even loop devices, see losetup(8)), creating volume groups (kind
-of virtual disks) from one or more physical volumes and creating one or more
+of virtual  disks) from one  or more physical volumes  and creating one  or more
 logical volumes (kind of logical partitions) in volume groups.
+** Libraries
+| № | Name               |
+|---+--------------------|
+| 1 | libblkid           |
+| 2 | libc               |
+| 3 | libdevmapper-event |
+| 4 | libdevmapper       |
+| 5 | libdl              |
+| 6 | libpthread         |
+| 7 | libreadline        |
+| 8 | librt              |
+| 9 | libudev            |
+|---+--------------------|
+
 -----
 
-** Index
+* Index
 
 #+BEGIN_EXAMPLE
-    lvm (8)       - LVM2 tools
-    lvs (8)       - report information about logical volumes
-    pvs (8)       - report information about physical volume
-    vgs (8)       - report information about volume groups
-    vgscan (8)    - scan all disks for volume groups and rebuild caches
-    lvcreate (8)  - create a logical volume in an existing volume group
-    lvextend (8)  - extend the size of a logical volume
-    lvreduce (8)  - reduce the size of a logical volume
-    pvcreate (8)  - initialize a disk or partition for use by LVM
-    vgcreate (8)  - create a volume group
-    vgextend (8)  - add physical volumes to a volume group
-    vgreduce (8)  - reduce a volume group
-    vgchange  (8) - change attributes of a volume group
-    lvdisplay (8) - display attributes of a logical volume
-    pvdisplay (8) - display attributes of a physical volume
-    vgdisplay (8) - display attributes of volume groups
+    lvm (8)          - LVM2 tools
+    lvs (8)          - report information about logical volumes
+    pvs (8)          - report information about physical volumes
+    vgs (8)          - report information about volume groups
+
+    pvck (8)         - check physical volume metadata
+    vgck (8)         - check volume group metadata
+
+    fsadm (8)        - utility to resize or check filesystem on a device
+
+    lvmsar (8)       - LVM system activity reporter
+    lvscan (8)       - scan (all disks) for Logical Volumes
+    pvmove (8)       - move physical extents
+    pvscan (8)       - scan all disks for physical volumes
+    vgscan (8)       - scan all disks for volume groups and rebuild caches
+
+    lvmconf (8)      - LVM configuration modifier
+    lvmdump (8)      - create lvm2 information dumps for diagnostic purposes
+    lvmetad (8)      - LVM metadata cache daemon
+    lvmsadc (8)      - LVM system activity data collector
+    vgmerge (8)      - merge two volume groups
+    vgsplit (8)      - split a volume group into two
+
+    lvchange (8)     - change attributes of a logical volume
+    lvcreate (8)     - create a logical volume in an existing volume group
+    lvextend (8)     - extend the size of a logical volume
+    lvmpolld (8)     - LVM poll daemon
+    lvreduce (8)     - reduce the size of a logical volume
+    lvremove (8)     - remove a logical volume
+    lvrename (8)     - rename a logical volume
+    lvresize (8)     - resize a logical volume
+    pvchange (8)     - change attributes of a physical volume
+    pvcreate (8)     - initialize a disk or partition for use by LVM
+    pvremove (8)     - remove a physical volume
+    pvresize (8)     - resize a disk or partition in use by LVM2
+    vgchange (8)     - change attributes of a volume group
+    vgcreate (8)     - create a volume group
+    vgexport (8)     - make volume groups unknown to the system
+    vgextend (8)     - add physical volumes to a volume group
+    vgimport (8)     - make exported volume groups known to the system
+    vgreduce (8)     - reduce a volume group
+    vgremove (8)     - remove a volume group
+    vgrename (8)     - rename a volume group
+
+    lvconvert (8)    - convert a logical volume from linear to mirror or snapshot
+    lvdisplay (8)    - display attributes of a logical volume
+    lvmchange (8)    - change attributes of the logical volume manager
+    lvmconfig (8)    - Display LVM configuration
+    pvdisplay (8)    - display attributes of a physical volume
+    vgconvert (8)    - convert volume group metadata format
+    vgdisplay (8)    - display attributes of volume groups
+    vgmknodes (8)    - recreate volume group directory and logical volume special files
+
+    lvmdiskscan (8)  - scan for all devices visible to LVM2
+    vgcfgbackup (8)  - backup volume group descriptor area
+    vgcfgrestore (8) - restore volume group descriptor area
 #+END_EXAMPLE
 
-** Reference
-*** Links
+* Reference
+** Links
 - https://wiki.debian.org/LVM
