--- a/spices/cix-netcat.org
+++ b/spices/cix-netcat.org
@@ -1,6 +1,6 @@
 # File           : cix-netcat.org
 # Created        : <2016-11-04 Fri 22:44:54 GMT>
-# Last Modified  : <2017-1-09 Mon 00:41:34 GMT> sharlatan
+# Last Modified  : <2017-1-17 Tue 23:58:52 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
@@ -12,8 +12,15 @@
 * Receipts
 ** netcat
 *** netcat::options
+|----+-------------------|
 | -l | listen for a port |
+|----+-------------------|
+
 *** netcat::examples
 **** nc-170109001313
 setting up a one-shot webserver on port 8080 to present the content of a file:
-:    ~$  { echo -ne "HTTP/1.0 200 OK\r\nContent-Length: $(wc -c < input_f)\r\n\r\n" cat input_f; } | nc -l -p8080
+:    ~$ { echo -ne "HTTP/1.0 200 OK\r\nContent-Length: $(wc -c < input_f)\r\n\r\n" cat input_f; } | nc -l -p8080
+
+**** nc-170117213449
+"share" a FILE on a localhost:PORT (FILE=file.txt PORT=80):
+:    ~# while (nc -l 80 < file.txt > :); do : ;done
